# MediaService_C

./: CMakeLists.txt  main.c
